[package]
name = "seaway"
version = "0.1.0"
description = "Decentralized memberships on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "seaway"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]

[profile.dev]
overflow-checks = true

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[dependencies]
anchor-lang = { version = "0.26.0", features = ["init-if-needed", "allow-missing-optionals"]  }
anchor-spl = { version = "0.26.0", features = ["metadata"] }
mpl-token-metadata = { version = "1.3.4", features = ["no-entrypoint"] }
solana-program = "1.10.19"

borsh = { version = "0.9.3", features = ["const-generics"] }
chrono = { version = "0.4.22", default-features = false }